# ban-carbon-data-science

./: .gitignore  Makefile  README.md  pyproject.toml
ban_carbon_data_science/: __init__.py  dataset.py  features.py  plots.py
ban_carbon_data_science/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
libraries/ban_carbon_common/: README.md  pyproject.toml
libraries/ban_carbon_common/src/ban_carbon_common/: __init__.py  config.py  io.py  visualization.py
notebooks/: 1-fdv-data-processing.ipynb  2-fdv-power-plant-map.ipynb  3-fdv-power-plant-exploration.ipynb
projects/power-plant-emissions/: .env.example  Makefile  README.md  pyproject.toml
projects/power-plant-emissions/notebooks/: 1-fdv-data-processing.ipynb  2-fdv-power-plant-map.ipynb  3-fdv-power-plant-exploration.ipynb
projects/power-plant-emissions/src/power_plant_emissions/: __init__.py  config.py  dataset.py  features.py  plots.py
projects/power-plant-emissions/src/power_plant_emissions/modeling/: predict.py  train.py
projects/revenue-forecast/: README.md
projects/revenue-forecast/notebooks/: 1-revenue-forecast.ipynb
projects/revenue-forecast/reports/: revenue-forecast-budget.xlsx
