[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ban_carbon_common"
version = "0.1.0"
description = "Shared utilities for Ban Carbon data science projects"
authors = [
  { name = "Francisco del Villar" },
]
license = { text = "MIT License" }
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "geopandas>=1.1.1",
    "loguru",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pandera>=0.26.1",
    "python-dotenv",
    "tqdm",
    "typer",
]

[tool.ruff]
line-length = 99
src = ["src"]
